Fixed height scaling from view to percentage because the app was too tall

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 .content {
   border-radius: 12px;
-  width: 100vw;
+  width: 100%;
   /* height: 80vh; */
   margin: 0 auto 10px auto;
   padding-top: 10vh;
