--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,8 +1,8 @@
 .header-top-row {
   position: fixed;
   top: 0;
-  width: 100vw;
-  height: 10vh;
+  width: 100%;
+  height: 10%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -14,7 +14,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 90vw;
+  width: 90%;
   z-index: 10;
 }
 .app-name {
